update atm & loader

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "color",
         "colors",
         "http",
-        "sleep"
+        "sleep",
+        "parallel",
+        "textutils"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field"
